home banner height changes to prevent page reload flicker

--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -170,7 +170,7 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 
 /* Home */
 #page-home #banner {height:auto;}
-#page-home #banner .cycle-slideshow {overflow:hidden; margin:0;}
+#page-home #banner .cycle-slideshow {height:calc(100vw * 0.346); overflow:hidden; margin:0;}
 #page-home #banner .cycle-overlay {width:300px; padding:20px 40px; position:absolute; top:40%; left:100px; bottom:auto; opacity:1; border-radius:4px; color:#FFF; background:#BB312B; box-shadow:inset 0 0 85px 0 rgba(0, 0, 0, 0.45);}
 
 #page-home #content .text1,
